--- a/style.css
+++ b/style.css
@@ -38,23 +38,20 @@
 }
 .banner-title{
     color: #272727;
-    font-weight: 800;
+    font-weight: 900;
     font-size: 80px;
     width: 750px;
     height: 288px;
     flex-direction: column;
+    font-family: lato;
 }
 .banner-img{
-    width: 635px;
-    height: 800px;
+    height: 80vh;
 }
 .banner-description{
     color: rgba(39, 39, 39, 0.60);
     font-family: Lato;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    width: 634px ;
+    font-size: xx-large;
 }
 .btn-primary{
     padding: 20px 43px;
