--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: #f3bac5;
 }
 .banner-title{
     color: #272727;
@@ -46,7 +47,7 @@
     font-family: lato;
 }
 .banner-img{
-    height: 80vh;
+    height: 100vh;
 }
 .banner-description{
     color: rgba(39, 39, 39, 0.60);
@@ -105,9 +106,11 @@
     width: 464px;
     height: 538px;
 }
-h6{
+#flower-names{
     padding: 100px;
     font-size: x-large;
+    display: flex;
+    justify-content: space-around;
 }
 
 /* service section starts here  */
