--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Lato;
+    box-sizing: border-box;
 }
 /* nav bar starts here  */
 .nav-container{
@@ -93,6 +94,7 @@
     border-radius: 300px 300px 0 0;
     width: 464px;
     height: 538px;
+    margin: auto;
 }
 #bouquet{
     background-color: rgb(177, 229, 229);
@@ -108,9 +110,11 @@
 }
 #flower-names{
     padding: 100px;
-    font-size: x-large;
+    font-size: 50px;
     display: flex;
     justify-content: space-around;
+    text-align: center;
+    padding: 20px;
 }
 
 /* service section starts here  */
@@ -118,6 +122,12 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: #b39797;
+    width: 1440px;
+    height: 320px;
+    text-align: center;
+    margin-left: 20%;
+    margin-bottom: 2%;
 }
 
 /* hot deals section starts here  */
@@ -128,6 +138,9 @@
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #e3b8b8;
 }
 .hot-deal{
     justify-content: center;
@@ -158,9 +171,10 @@ line-height: 30px;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-    padding: 20px;
-    margin-bottom: 20px;
     width: 100%;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
 }
 .insta-title{
     color: #272727;
@@ -175,24 +189,48 @@ line-height: 30px;
     font-weight: 400;
     line-height: 30px;
 }
-.suscribe-section{
-    text-align: center;
+/* subscription section  */
+.subscribe-section{
+    background-image: url(Images/Rectangle\ 9.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
 }
 .subscribe-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    padding: 3%;
 }
 .subscribe-content{
-    background-image: url(Images/Rectangle\ 9.png);
     width: 1440px;
     height: 450px;
+    align-items: center;
     text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 40px;
+    padding-top: 150px;
+    
 }
-.email{
+.subscription-info{
+    font-size: x-large;
+    padding-bottom:50px;
+}
+.subscribe-title{
+    padding-bottom:30px;
+}
+#email{
     border: none;
     color: white;
+    padding: 20px 43px;
+    border: none;
+    border-radius: 8px;
+    font-size: 20px;
+    width: 550px;
 }
 
 /* footer starts here  */
