--- a/style.css
+++ b/style.css
@@ -166,21 +166,23 @@ line-height: 30px;
 /* insta section starts here  */
 .insta-section{
     text-align: center;
+    padding: 30px;
+    margin: 100px;
 }      
 .insta-images{
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
+    flex-direction: center;
+    align-items: center;
     width: 100%;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 100px;
+    margin-top: 100px;
 }
 .insta-title{
     color: #272727;
     text-align: center;
     font-size: 40px;
     font-weight: 800;
+    padding-bottom: 20px;
 }
 .insta-info{
     color: rgba(39, 39, 39, 0.60);
@@ -206,8 +208,7 @@ line-height: 30px;
     padding: 3%;
 }
 .subscribe-content{
-    width: 1440px;
-    height: 450px;
+    width: 100%;
     align-items: center;
     text-align: center;
     justify-content: center;
